--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="ads">
 
     <div class="image">
-      <img src="/images/image-header-mobile.jpg" alt="header image">
+      <img src="./images/image-header-mobile.jpg" alt="header image">
     </div>
 
     <div class="get">
